--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-846.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1022.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-259.8KB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-453.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-1.52MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇮🇹 意大利-429.1KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-321.9KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.40MB/s(Youtube:不良林), server: 43.134.229.238, port: 46043, type: vmess, uuid: b5770696-55be-4d23-a28e-8a1ab771dd7d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.60MB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇦 加拿大-482.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-909.4KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-503.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-355.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-818.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-342.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-501.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-846.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1022.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-259.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-429.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-342.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-501.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
