--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-909.4KB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-555.6KB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-207.3KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-331.9KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-2.02MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-355.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-482.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇬🇧 英国-653.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-903.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-858.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.62MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.08MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-909.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-555.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-207.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-331.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-482.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-653.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-903.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-858.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
